index.html created

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Velociraptor czy Triceratops</title>
+	<title>Choinka</title>
 </head>
 <body>
 	<script type="text/javascript" src="js/scripts.js"></script>
